--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.6.4",
     "jspdf": "^2.5.1",
     "popper.js": "^1.16.1",
+    "sweetalert2": "^11.7.12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vue-toastify": "^2.0.0-alpha.1"
